--- a/week1/Exercise_1_1.ipynb
+++ b/week1/Exercise_1_1.ipynb
@@ -293,10 +293,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c0dd20f7"
+        "id": "c0dd20f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18ff18e3-8344-41dd-ef4d-3efbdce791af"
       },
-      "source": [],
+      "source": [
+        "h = int(input('Enter first number:'))\n",
+        "b = int(input('Enter second number:'))\n",
+        "area = b*h/2\n",
+        "print(area)"
+      ],
       "id": "c0dd20f7",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number:5\n",
+            "Enter second number:7\n",
+            "17.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ErH1A0-fz6K0"
+      },
+      "id": "ErH1A0-fz6K0",
       "execution_count": null,
       "outputs": []
     }
